Overflow horizontal e float left

--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
 </nav>
 
 <div id="float">
-  <div id="rect1" class="rect"></div>
-  <div id="rect2" class="rect"></div>
+  <div class="rectR"></div>
+  <div class="rectG"></div>
+    <div class="rectR"></div>
+
+  <div class="rectG"></div>
+    <div class="rectR"></div>
+
+  <div class="rectG"></div>
+    <div class="rectR"></div>
+
+  <div class="rectG"></div>
+    <div class="rectR"></div>
+
+
+
+
 </div>
 
   <script src="js/script.js"></script>
