Javascript adicionado, imagens adicionadas

--- a/index.html
+++ b/index.html
@@ -13,21 +13,9 @@
 </head>
 <body>
 
-<nav>
+<nav></nav>
 
-</nav>
-
-<div id="float">
-  <div class="rectR"></div>
-  <div class="rectG"></div>
-  <div class="rectR"></div>
-  <div class="rectG"></div>
-  <div class="rectR"></div>
-  <div class="rectG"></div>
-  <div class="rectR"></div>
-  <div class="rectG"></div>
-  <div class="rectR"></div>
-</div>
+<div id="float"></div>
 
   <script src="js/script.js"></script>
 </body>
