Imagens adicionadas, sombras, nav e header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 </head>
 <body>
 
-<nav></nav>
+	<header>
+		<a href="#">Obrigatório Não Ver</a>
+	</header>
 
-<div id="float"></div>
+	<nav>
+		<a href="#">Releituras</a>
+		<a href="#">Autores</a>
+		<a href="#">Loja</a>
+	</nav>
+
+	<div id="float"></div>
 
   <script src="js/script.js"></script>
 </body>
